--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ nav ul li a:hover {
 
 @media (max-width: 768px) {
     header {
-        background: transparent;
-        position: fixed;
+        background: #222;
         width: 100%;
     }
     .container {
